feat: Comprehensive language and UI improvements
Language System Fixes:
- Remove unnecessary restart popup for RTL/LTR switching
- Fix language picker not updating to show selected language
- Add key props to force picker re-rendering
- Simplify language change logic with immediate state updates

UI Improvements:
- Fix language and currency picker width issues (text truncation)
- Improve picker styling with proper padding and height
- Enhanced visual hierarchy and better text display

Custom Currency Management:
- Add complete custom currency management section in Settings
- Enable edit and delete functionality for custom currencies
- Add confirmation dialogs for currency deletion
- Smart default currency handling when custom currency is deleted
- Complete translation coverage for all 13 languages

Centralized Version Management:
- Create centralized version update system (scripts/update-version.js)
- Add npm script for synchronized version updates across all files
- Update package.json, package-lock.json, app.json, and build.gradle
- Add development guidelines and no-auto-commit policies

Translation Enhancements:
- Add missing language change notification keys to all languages
- Add custom currency management translations (13 languages)
- Complete translation coverage: EN, ES, FR, DE, AR, FA, IT, PT, RU, ZH, JA, KO, ID

Version: 0.2.2

Files updated: Settings UI, all language files, version management, documentation

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -74,5 +74,8 @@
   "exampleTitle": "مثال:",
   "exampleText": "الرمز: BTC\nالاسم: Bitcoin\nالرمز: ₿\nالسعر: 0.000025 (إذا كان 1 دولار = 0.000025 بيتكوين)",
   "languageChanged": "تم تغيير اللغة",
-  "restartRequired": "يرجى إعادة تشغيل التطبيق لتطبيق تغييرات التخطيط للغة الجديدة."
+  "restartRequired": "يرجى إعادة تشغيل التطبيق لتطبيق تغييرات التخطيط للغة الجديدة.",
+  "manageCustomCurrencies": "إدارة العملات المخصصة",
+  "createCustomCurrencyButton": "إنشاء عملة مخصصة",
+  "customCurrencyDeleted": "تم حذف العملة المخصصة بنجاح"
 }
