--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -66,5 +66,8 @@
   "success": "موفق",
   "reset": "بازنشانی",
   "languageChanged": "زبان تغییر کرد",
-  "restartRequired": "لطفاً برنامه را مجدداً راه‌اندازی کنید تا تغییرات طرح‌بندی برای زبان جدید اعمال شود."
+  "restartRequired": "لطفاً برنامه را مجدداً راه‌اندازی کنید تا تغییرات طرح‌بندی برای زبان جدید اعمال شود.",
+  "manageCustomCurrencies": "مدیریت ارزهای سفارشی",
+  "createCustomCurrencyButton": "ایجاد ارز سفارشی",
+  "customCurrencyDeleted": "ارز سفارشی با موفقیت حذف شد"
 }
