--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -73,5 +73,8 @@
   "success": "Успех",
   "reset": "Сбросить",
   "languageChanged": "Язык Изменён",
-  "restartRequired": "Пожалуйста, перезапустите приложение, чтобы применить изменения макета для нового языка."
+  "restartRequired": "Пожалуйста, перезапустите приложение, чтобы применить изменения макета для нового языка.",
+  "manageCustomCurrencies": "Управление Пользовательскими Валютами",
+  "createCustomCurrencyButton": "Создать Пользовательскую Валюту",
+  "customCurrencyDeleted": "Пользовательская валюта успешно удалена"
 }
