--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -73,5 +73,8 @@
   "success": "Sucesso",
   "reset": "Redefinir",
   "languageChanged": "Idioma Alterado",
-  "restartRequired": "Por favor, reinicie o aplicativo para aplicar as alterações de layout do novo idioma."
+  "restartRequired": "Por favor, reinicie o aplicativo para aplicar as alterações de layout do novo idioma.",
+  "manageCustomCurrencies": "Gerenciar Moedas Personalizadas",
+  "createCustomCurrencyButton": "Criar Moeda Personalizada",
+  "customCurrencyDeleted": "Moeda personalizada excluída com sucesso"
 }
